<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/login_top_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_sign_in"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login_button"
            app:layout_constraintEnd_toEndOf="@+id/tipl_password"
            app:layout_constraintTop_toBottomOf="@+id/tipl_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipl_email"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_banner">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipl_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/tipl_email"
            app:layout_constraintStart_toStartOf="@+id/tipl_email"
            app:layout_constraintTop_toBottomOf="@+id/tipl_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:linksClickable="false"
            android:text="@string/login_register_button"
            android:textColor="@color/md_theme_light_primary"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sign_in"
            app:layout_constraintStart_toStartOf="@+id/tipl_password"
            app:layout_constraintTop_toTopOf="@+id/btn_sign_in" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
