<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.nolek.application.data.ui.register.RegisterVM" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/register_name_details_top_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/btn_next"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="14dp"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="@+id/tipl_password"
                app:layout_constraintTop_toBottomOf="@+id/tipl_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tipl_first_name"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_banner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_first_name_hint"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.firstName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tipl_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintEnd_toEndOf="@+id/tipl_first_name"
                app:layout_constraintStart_toStartOf="@+id/tipl_first_name"
                app:layout_constraintTop_toBottomOf="@+id/tipl_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_last_name_hint"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.lastName}" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>